--- a/easywizard.css
+++ b/easywizard.css
@@ -43,7 +43,16 @@
     background: #337ab7;
     transform: scale(1.4);
     border-color: #5cb85c;
+    animation-name: step-active;
+    animation-duration: 0.4s;
 }
+
+.easywizard-step-error {
+    animation-name: step-error;
+    animation-duration: 0.4s;
+    animation-iteration-count: 4;
+}
+
 
 .easywizard-content {
     display: none;
@@ -56,4 +65,35 @@
 .easywizard-buttons:after {
     content: '';
     clear: both;
+}
+
+
+@keyframes step-active {
+
+    0% {
+        margin-top: 10px;
+    }
+    50% {
+        margin-top: -10px;
+        font-weight: bold;
+        border-width: 0;
+        transform: scale(1.5);
+    }
+    100% {
+        font-weight: normal;
+        border-width: 4px;
+        transform: scale(1.4);
+    }
+
+}
+
+@keyframes step-error {
+
+    from {
+        background-color: #f00 !important;
+    }
+    to {
+        background-color: #5cb85c;
+    }
+
 }
