--- a/easywizard.css
+++ b/easywizard.css
@@ -36,7 +36,7 @@
     margin: 0 20px;
     z-index: 99;
     transform: scale(1);
-    transition: transform .3s;
+    transition: transform 0.3s, color 0.6s, border 0.6s, background 0.6s;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -51,12 +51,16 @@
     animation-duration: 0.4s;
 }
 
+.easywizard-step.passed-step {
+    background: #337ab7;
+    border-color: #337ab7;
+}
+
 .easywizard-step-error {
     animation-name: step-error;
     animation-duration: 0.4s;
     animation-iteration-count: 4;
 }
-
 
 .easywizard-content {
     display: none;
@@ -70,7 +74,6 @@
     content: '';
     clear: both;
 }
-
 
 @keyframes step-active {
 
